# audio-clipper

./: Cargo.toml  README.md  example.env
src/: error.rs  main.rs  queue.rs  voice.rs
