[package]
name = "audio-clipper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
dotenv = "0.15.0"
mp3lame-encoder = "0.2.0"
serenity = "0.12"

[dependencies.tokio]
version = "1.21.2"
features = ["macros", "rt-multi-thread"] 

[dependencies.songbird]
version = "0.4"
features = ["builtin-queue", "receive"]
